Continues website improvement of layout

--- a/main/index.html
+++ b/main/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../css/globals.css" />
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/responsive.css">
     <title>Peony Flower Catalogue</title>
     <meta name="description" content="Peony is a visual haven for flower lovers. Explore curated blooms, discover rare petals, and find the flower that speaks to your heart." />
     <meta name="keywords" content="flower catalogue, bouquet, floral, peony, nature, blooms, petals, flower lovers" />
