Fixing the overall layout of the homepage

--- a/main/index.html
+++ b/main/index.html
@@ -19,10 +19,11 @@
   <body>
     <div class="desktop-home-page">
       <div class="foreground">
+
         <div class="hero-image" aria-hidden="true"></div>
         <div class="div" aria-hidden="true"></div>
+
         <img class="heroimage" src="../assets/images/heroImage-sr4.jpg" alt="Colorful hero image of flowers" />
-        <div class="footer" aria-hidden="true"></div>
       </div>
 
       <footer class="footer-2" aria-label="Main site footer">
@@ -72,13 +73,16 @@
       </footer>
 
       <div class="body">
-        <button class="log-in-button" aria-label="Sign in to your account">
+        <div class="main-buttons">
+          <button class="log-in-button" aria-label="Sign in to your account">
           <p class="text-wrapper-14">Sign in</p>
-        </button>
+          </button>
 
-        <button class="browse-now-button" aria-label="Browse flower catalogue">
-          <p class="text-wrapper-15">Browse Now</p>
-        </button>
+          <button class="browse-now-button" aria-label="Browse flower catalogue">
+            <p class="text-wrapper-15">Browse Now</p>
+          </button>
+        </div>
+        
 
         <section class="main-text" aria-labelledby="main-heading">
           <p id="main-heading" class="find-the-flower-that">Find the Flower<br />That Speaks To<br />Your Heart</p>
