Fixed new elements and css part 1

--- a/main/index.html
+++ b/main/index.html
@@ -25,38 +25,46 @@
 
         <img class="heroimage" src="../assets/images/heroImage-sr4.jpg" alt="Colorful hero image of flowers" />
       </div>
-
+      <!-- FOOTER SECTION -->
       <footer class="footer-2" aria-label="Main site footer">
         <div class="footer-3" aria-hidden="true"></div>
-        <img class="line" src="../assets/icons/Line 2.png" alt="Decorative line divider" />
-        <div class="text-wrapper">@Sean Rhani Dela Cruz</div>
-        <div class="t-c">
+        <img class="line1" src="../assets/icons/Line 2.png" alt="Decorative line divider" />
+        <div class="text-wrapper-1">@Sean Rhani Dela Cruz</div>
+        
+        <!-- TERMS AND CONDITIONS -->
+        <div class="terms-conditions">
           <div class="text-wrapper-2">Terms</div>
-          <div class="text-wrapper-3">Privacy</div>
-          <div class="text-wrapper-4">SiteMap</div>
-          <div class="text-wrapper-5">© 2025 Peony</div>
+          <div class="text-wrapper-2">Privacy</div>
+          <div class="text-wrapper-2">SiteMap</div>
+          <div class="text-wrapper-2"><strong>© 2025 Peony</strong></div>
         </div>
+
+        <!-- CONTACT HERE -->
         <div class="contact">
           <div class="text-wrapper-6">Contact</div>
           <div class="text-wrapper-7">delacruzseanrhani@gmail.com</div>
           <p class="element-purok">
-            115 Purok 3, Strawberry St. San<br />Francisco, Mabalacat City,<br />Province of Pampanga
+            115 Purok 3, Strawberry St. San Francisco, Mabalacat City, Province of Pampanga
           </p>
         </div>
+
+        <!-- FEEDBACK HERE -->
         <div class="feedback">
           <div class="text-wrapper-8">Give us your feedback</div>
           <div class="text-wrapper-9">Feedback form</div>
           <div class="text-wrapper-10">Survey form</div>
         </div>
+
+        <!-- QUICK ACCESS HERE -->
         <div class="quick-access">
           <div class="text-wrapper-11">Quick Access</div>
           <div class="text-wrapper-12">Sign in</div>
           <div class="text-wrapper-13">Log in</div>
         </div>
+
         <div class="about">
           <p class="we-re-a-visual-haven">
-            We&#39;re a visual haven for flower lovers <br />curating blooms that speak to the soul. <br />Explore, feel,
-            and find the petals that <br />match your heart. Each stem is a story <br />waiting to be discovered.
+            We&#39;re a visual haven for flower lovers curating blooms that speak to the soul. Explore, feel, and find the petals that match your heart. Each stem is a story waiting to be discovered.
           </p>
         </div>
         <div class="socials" aria-label="Social media links">
@@ -69,7 +77,7 @@
           <img class="peony-logo" src="../assets/icons/Peony Logo.png" alt="Peony logo" />
           <p class="p">Peony, a flower Catalogue Website</p>
         </div>
-        <img class="img" src="../assets/icons/Line 1.png" alt="Decorative line divider" />
+        <img class="line2" src="../assets/icons/Line 1.png" alt="Decorative line divider" />
       </footer>
 
       <div class="body">
