--- a/main/index.html
+++ b/main/index.html
@@ -11,44 +11,44 @@
 </head>
 
 <body>
-    <!-- HEADER -->
-    <header class="header">
-        <form class="search-bar" role="search">
-            <input type="search" placeholder="Find a Flower..." />
-            <button type="submit" class="search-button">
-                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#666" stroke-width="2">
-                    <circle cx="11" cy="11" r="8"></circle>
-                    <path d="m21 21-4.35-4.35"></path>
-                </svg>
-            </button>
-        </form>
-
-        <nav class="nav-bar">
-            <ul class="nav-list">
-                <li class="nav-item">
-                    <span>Home</span>
-                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <polyline points="6 9 12 15 18 9"></polyline>
-                    </svg>
-                </li>
-                <li class="nav-item">
-                    <span>Assets</span>
-                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <polyline points="6 9 12 15 18 9"></polyline>
-                    </svg>
-                </li>
-                <li class="nav-item">
-                    <span>Profile</span>
-                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <polyline points="6 9 12 15 18 9"></polyline>
-                    </svg>
-                </li>
-            </ul>
-        </nav>
-    </header>
-
-    <!-- HERO SECTION -->
+    <!-- HERO SECTION WITH INTEGRATED HEADER -->
     <section class="hero-section">
+        <!-- HEADER -->
+        <header class="header">
+            <form class="search-bar" role="search">
+                <input type="search" placeholder="Find a Flower..." />
+                <button type="submit" class="search-button">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#666" stroke-width="2">
+                        <circle cx="11" cy="11" r="8"></circle>
+                        <path d="m21 21-4.35-4.35"></path>
+                    </svg>
+                </button>
+            </form>
+
+            <nav class="nav-bar">
+                <ul class="nav-list">
+                    <li class="nav-item">
+                        <span>Home</span>
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <polyline points="6 9 12 15 18 9"></polyline>
+                        </svg>
+                    </li>
+                    <li class="nav-item">
+                        <span>Assets</span>
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <polyline points="6 9 12 15 18 9"></polyline>
+                        </svg>
+                    </li>
+                    <li class="nav-item">
+                        <span>Profile</span>
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <polyline points="6 9 12 15 18 9"></polyline>
+                        </svg>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+
         <div class="hero-left">
             <div class="main-text">
                 <h1>Find the Flower<br />That Speaks To<br />Your Heart</h1>
@@ -70,9 +70,7 @@
             <!-- ABOUT SECTION -->
             <div class="footer-section">
                 <div class="logo-and-text">
-                    <svg class="peony-logo" viewBox="0 0 50 50" fill="#5a6c3a">
-                        <circle cx="25" cy="25" r="20" />
-                    </svg>
+                    <img class="peony-logo" src="../assets/icons/Peony Logo.png" alt="Peony logo" />
                     <p class="logo-text">Peony, a flower Catalogue Website</p>
                 </div>
                 <div class="about-text">
