--- a/main/index.html
+++ b/main/index.html
@@ -34,17 +34,33 @@
                             <polyline points="6 9 12 15 18 9"></polyline>
                         </svg>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item dropdown-trigger" data-dropdown="assets">
                         <span>Assets</span>
-                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <svg class="chevron-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <polyline points="6 9 12 15 18 9"></polyline>
                         </svg>
+                        <!-- Assets Dropdown -->
+                        <div class="dropdown-menu" id="assetsDropdown">
+                            <ul>
+                                <li class="dropdown-item">Favorites</li>
+                                <li class="dropdown-item">Collections</li>
+                                <li class="dropdown-item">Account</li>
+                            </ul>
+                        </div>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item dropdown-trigger" data-dropdown="profile">
                         <span>Profile</span>
-                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <svg class="chevron-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <polyline points="6 9 12 15 18 9"></polyline>
                         </svg>
+                        <!-- Profile Dropdown -->
+                        <div class="dropdown-menu" id="profileDropdown">
+                            <ul>
+                                <li class="dropdown-item sign-in-link">Sign in</li>
+                                <li class="dropdown-item log-in-link">Log in</li>
+                                <li class="dropdown-item">Help and Support</li>
+                            </ul>
+                        </div>
                     </li>
                 </ul>
             </nav>
@@ -147,8 +163,8 @@
             <div class="footer-section">
                 <h3>Quick Access</h3>
                 <ul>
-                    <li class="sign-in-link">Sign in</li>
-                    <li class="log-in-link">Log in</li>
+                    <li class="footer-sign-in-link">Sign in</li>
+                    <li class="footer-log-in-link">Log in</li>
                 </ul>
             </div>
 
