--- a/main/index.html
+++ b/main/index.html
@@ -165,8 +165,8 @@
             <div class="footer-section">
                 <h3>Quick Access</h3>
                 <ul>
-                    <li class="footer-sign-in-link">Sign in</li>
-                    <li class="footer-log-in-link">Log in</li>
+                    <li class="footer-link">Sign in</li>
+                    <li class="footer-link">Log in</li>
                 </ul>
             </div>
 
@@ -174,8 +174,8 @@
             <div class="footer-section">
                 <h3>Give us your feedback</h3>
                 <ul>
-                    <li>Feedback form</li>
-                    <li>Survey form</li>
+                    <li class="footer-link">Feedback form</li>
+                    <li class="footer-link">Survey form</li>
                 </ul>
             </div>
 
@@ -183,7 +183,9 @@
             <div class="footer-section">
                 <h3>Contact</h3>
                 <ul>
-                    <li>delacruzseanrhani@gmail.com</li>
+                    <li>
+                    <a class="footer-mail" href="mailto:delacruzseanrhani@gmail.com">delacruzseanrhani@gmail.com</a>
+                    </li>
                     <li>115 Purok 3, Strawberry St. San Francisco, Mabalacat City, Pampanga</li>
                 </ul>
             </div>
