fixed the categories section

--- a/main/browse.html
+++ b/main/browse.html
@@ -78,22 +78,23 @@
         <!-- CATEGORIES SECTION -->
         <section class="categories" id="browse">
             <div class="group-2">
-                <div class="text-wrapper-10">Browse Unlimited Flowers</div>
-                <div class="treating-all-skin-co">Browse Flowers by Category</div>
+                <div class="header-1">Browse Unlimited Flowers</div>
+                <div class="sub-header-1">Browse Flowers by Category</div>
             </div>
             
             <div class="category-grid">
                 <div class="category-item">
-                    <img class="mask-group" src="../assets/images/category1.jpg" alt="Annual Flowers" />
-                    <div class="text-wrapper-8">Annual</div>
+                    <img src="../assets/images/annual flower.jpg" alt="Annual Flowers" />
+                    <p class="category-text">Annual</p>
+                </div>
+                
+                <div class="category-item">
+                    <img src="../assets/images/biennial flower.jpg" alt="Biennial Flowers" />
+                    <p class="category-text">Biennial</p>
                 </div>
                 <div class="category-item">
-                    <img class="image-living-room" src="../assets/images/category2.jpg" alt="Biennial Flowers" />
-                    <div class="text-wrapper-7">Biennial</div>
-                </div>
-                <div class="category-item">
-                    <img class="img" src="../assets/images/category3.jpg" alt="Perennial Flowers" />
-                    <div class="text-wrapper-9">Perennial</div>
+                    <img src="../assets/images/perennial flower.jpg" alt="Perennial Flowers" />
+                    <p class="category-text">Perennial</p>
                 </div>
             </div>
         </section>
@@ -183,7 +184,7 @@
             </button>
         </section>
 
-        <!-- PETALS SECTION -->
+        <!-- PETALS CAROUSEL SECTION -->
         <section class="share" id="petals">
             <div class="title-2">
                 <div class="title-3">Diverse flowers for everyone</div>
