--- a/main/browse.html
+++ b/main/browse.html
@@ -12,7 +12,16 @@
         <!-- HEADER -->
         <header class="header">
             <!-- Hero Background Image -->
-            <img class="vector" src="../assets/images/heroImage-sr4.jpg" alt="Header background" />
+            <div style="position: relative; width: 100%; height: 200px;">
+                <img class="vector" src="../assets/images/heroImage-sr4.jpg" alt="Header background" />
+                <svg style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none;">
+                    <defs>
+                    <clipPath id="wave-clip" clipPathUnits="objectBoundingBox">
+                        <path d="M 0,0 L 0,0.75 Q 0.125,0.85 0.25,0.75 Q 0.375,0.65 0.5,0.75 Q 0.625,0.85 0.75,0.75 Q 0.875,0.65 1,0.75 L 1,0 Z" />
+                    </clipPath>
+                    </defs>
+                </svg>
+            </div>
             
             <!-- Logo -->
             <img class="peony-logo" src="../assets/icons/Peony Logo.png" alt="Peony Logo" />
@@ -67,12 +76,11 @@
             </nav>
             
             <!-- Sub Navigation -->
-            <div class="nav">
-                <div class="sub-nav-bar"></div>
-                <a href="#browse" class="text-wrapper-2">Browse</a>
-                <a href="#top-picks" class="text-wrapper">Top picks</a>
-                <a href="#petals" class="div">Petals</a>
-            </div>
+                <div class="sub-nav-bar">
+                    <a href="#browse">Browse</a>
+                    <a href="#top-picks">Top picks</a>
+                    <a href="#petals">Petals</a>
+                </div>
         </header>
 
         <!-- CATEGORIES SECTION -->
