--- a/main/browse.html
+++ b/main/browse.html
@@ -41,10 +41,12 @@
             <nav class="nav-bar">
                 <ul class="nav-list">
                     <li class="nav-item">
-                        <span>Home</span>
-                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <polyline points="6 9 12 15 18 9"></polyline>
-                        </svg>
+                        <a class="home-link" href="index.html">
+                            <span>Home</span>
+                            <svg class="remove-svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <polyline points="6 9 12 15 18 9"></polyline>
+                            </svg>
+                        </a>
                     </li>
                     <li class="nav-item dropdown-trigger" data-dropdown="assets">
                         <span>Assets</span>
