Added the survey page

--- a/main/browse.html
+++ b/main/browse.html
@@ -193,15 +193,15 @@
                 <div class="title-4">#Petals</div>
             </div>
             <div class="images-2">
-                <img src="../assets/images/jei-lee-yRXuXvy4sQ4-unsplash.jpg" alt="Flower collection" />
-                <img src="../assets/images/andrew-small-EfhCUc_fjrU-unsplash.jpg" alt="Flower collection" />
-                <img src="../assets/images/zoltan-tasi-yanhwFwyoaU-unsplash.jpg" alt="Flower collection" />
-                <img src="../assets/images/jeff-lowery-9wF7Bm8s5jQ-unsplash.jpg" alt="Flower collection" />
-                <img src="../assets/images/carnation-sr1.jpg" alt="Flower collection" />
-                <img src="../assets/images/zoe-richardson-oy7NjnG-CK4-unsplash.jpg" alt="Flower collection" />
-                <img src="../assets/images/kwang-mathurosemontri-fY1ECB1RCd0-unsplash.jpg" alt="Flower collection" />
-                <img src="../assets/images/quino-al--3KfR1GVKXY-unsplash.jpg" alt="Flower collection" />
-                <img src="../assets/images/the-new-york-public-library-Uyu_PNJ6Q6w-unsplash.jpg" alt="Flower collection" />
+                <img src="../assets/images/rflower-1.jpg" alt="Flower collection" />
+                <img src="../assets/images/rflower2.jpg" alt="Flower collection" />
+                <img src="../assets/images/rflower-3.jpg" alt="Flower collection" />
+                <img src="../assets/images/rflower-4.jpg" alt="Flower collection" />
+                <img src="../assets/images/rflower-5.jpg" alt="Flower collection" />
+                <img src="../assets/images/rflower-6.jpg" alt="Flower collection" />
+                <img src="../assets/images/rflower-7.jpg" alt="Flower collection" />
+                <img src="../assets/images/rflower-8.jpg" alt="Flower collection" />
+                <img src="../assets/images/rflower-9.jpg" alt="Flower collection" />
             </div>
         </section>
 
