Semi finalization of survey page

--- a/main/survey.html
+++ b/main/survey.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-  <!-- HEADER -->
-  <header class="header">
+    <!-- HEADER -->
+    <header class="header">
     
 
     <!-- Hero Background Image and logo -->
@@ -26,7 +26,7 @@
 
         <div class="back-logo">
             <img class="peony-logo" src="../assets/icons/Peony Logo.png" alt="Peony Logo" />
-            <a href="#" class="back-btn">← Go back</a>
+            <a href="index.html" class="back-btn">← Go back</a>
         </div>
     </div>
     
@@ -180,7 +180,7 @@
                 </div>
 
                 <div class="form-buttons">
-                    <button type="button" class="btn" onclick="clearForm()">Clear</button>
+                    <button type="button" class="btn-clear" onclick="clearForm()">Clear</button>
                     <button type="submit" class="btn btn-submit">Submit</button>
                 </div>
             </form>
@@ -308,5 +308,6 @@
 
     <!-- JAVASCRIPT -->
     <script src="../js/main.js"></script>
+    <script src="../js/forms.js"></script>
 </body>
 </html>
