added the feedback page

--- a/main/survey.html
+++ b/main/survey.html
@@ -11,8 +11,6 @@
 <body>
     <!-- HEADER -->
     <header class="header">
-    
-
     <!-- Hero Background Image and logo -->
     <div style="position: relative; width: 100%; height: 200px;">
         <img class="vector" src="../assets/images/heroImage-sr4.jpg" alt="Header background" />
@@ -187,7 +185,7 @@
         </div>
     </div>
 
-        <!-- SIGN UP MODAL -->
+    <!-- SIGN UP MODAL -->
     <div id="signUpModal" class="modal">
         <div class="modal-content">
             <button class="close-btn" id="closeModal" aria-label="Close modal">
@@ -309,5 +307,6 @@
     <!-- JAVASCRIPT -->
     <script src="../js/main.js"></script>
     <script src="../js/forms.js"></script>
+    <script src="../js/utils.js"></script>
 </body>
 </html>
