--- a/main/index.html
+++ b/main/index.html
@@ -203,6 +203,7 @@
     </footer>
 
     <!-- JAVASCRIPT -->
+    <script src="../js/main.js"></script>
     <script src="../js/utils.js"></script>
 </body>
 </html>
