fixed the linkage

--- a/main/index.html
+++ b/main/index.html
@@ -174,8 +174,8 @@
                 <div class="footer-section">
                     <h3>Give us your feedback</h3>
                     <ul>
-                        <li class="footer-link">Feedback form</li>
-                        <li class="footer-link">Survey form</li>
+                        <a class="no-underline" href="feedback.html"><li class="footer-link">Feedback form</li></a>
+                        <a class="no-underline" href="survey.html"><li class="footer-link">Survey form</li></a>
                     </ul>
                 </div>
 
@@ -203,6 +203,6 @@
         </footer>
 
         <!-- JAVASCRIPT -->
-        <script src="../js/utils.js"></script>
+        <script src="../js/modal.js"></script>
     </body>
 </html>
