--- a/main/browse.html
+++ b/main/browse.html
@@ -287,8 +287,8 @@
             <div class="footer-section">
                 <h3>Quick Access</h3>
                 <ul>
-                    <li class="footer-link">Sign in</li>
-                    <li class="footer-link">Log in</li>
+                    <a class="no-underline" href="feedback.html"><li class="footer-link">Feedback form</li></a>
+                    <a class="no-underline" href="survey.html"><li class="footer-link">Survey form</li></a>
                 </ul>
             </div>
 
@@ -326,5 +326,6 @@
 
     <!-- JAVASCRIPT -->
     <script src="../js/main.js"></script>
+    <script src="../js/modal.js"></script>
 </body>
 </html>
