--- a/main/survey.html
+++ b/main/survey.html
@@ -276,8 +276,8 @@
             <div class="footer-section">
                 <h3>Give us your feedback</h3>
                 <ul>
-                    <li class="footer-link">Feedback form</li>
-                    <li class="footer-link">Survey form</li>
+                    <a class="no-underline" href="feedback.html"><li class="footer-link">Feedback form</li></a>
+                    <a class="no-underline" href="survey.html"><li class="footer-link">Survey form</li></a>
                 </ul>
             </div>
 
@@ -305,8 +305,7 @@
     </footer>
 
     <!-- JAVASCRIPT -->
-    <script src="../js/main.js"></script>
     <script src="../js/forms.js"></script>
-    <script src="../js/utils.js"></script>
+    <script src="../js/modal.js"></script>
 </body>
 </html>
