Added fav icons

--- a/main/browse.html
+++ b/main/browse.html
@@ -4,6 +4,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
     <title>Browse - Peony Flower Catalogue</title>
+    <meta name="description" content="Peony is a visual haven for flower lovers. Explore curated blooms, discover rare petals, and find the flower that speaks to your heart." />
+    <meta name="keywords" content="flower catalogue, bouquet, floral, peony, nature, blooms, petals, flower lovers" />
+    <meta name="author" content="Sean Rhani Dela Cruz" />
+    <link rel="shortcut icon" href="../assets/favicon/fav-48px.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon/fav-32px.jpg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/fav-180px.jpg" />
+    <link rel="icon" type="image/png" sizes="192x192" href="../assets/favicon/fav-192px.jpg" />
     <link rel="stylesheet" href="../css/browse.css" />
     <link rel="stylesheet" href="../css/modal.css" />
 </head>
@@ -24,7 +31,7 @@
             </div>
             
             <!-- Logo -->
-            <img class="peony-logo" src="../assets/icons/Peony Logo.png" alt="Peony Logo" />
+            <img class="peony-logo" src="../assets/logo/peony-logo.jpg" alt="Peony Logo" />
             
             <!-- Search Bar -->
             <form class="search-bar" role="search">
@@ -251,7 +258,7 @@
             <!-- ABOUT SECTION -->
             <div class="footer-section">
                 <div class="logo-and-text">
-                    <img class="peony-logo" src="../assets/icons/Peony Logo.png" alt="Peony logo" />
+                    <img class="peony-logo" src="../assets/logo/peony-logo.jpg" alt="Peony logo" />
                     <p class="logo-text">Peony, a flower Catalogue Website</p>
                 </div>
                 <div class="about-text">
