added dropdown functionalities

--- a/main/survey.html
+++ b/main/survey.html
@@ -53,8 +53,12 @@
             </svg>
             <div class="dropdown-menu" id="assetsDropdown">
                 <ul>
-                    <li class="dropdown-item">Favorites</li>
-                    <li class="dropdown-item">Collections</li>
+                    <li class="dropdown-item">
+                    <a href="../main/favorite.html">Favorites</a>
+                    </li>
+                    <li class="dropdown-item">
+                    <a href="../main/collection.html">Collections</a>
+                    </li>
                     <li class="dropdown-item">Account</li>
                 </ul>
             </div>
