--- a/main/index.html
+++ b/main/index.html
@@ -48,8 +48,13 @@
                             <!-- Assets Dropdown -->
                             <div class="dropdown-menu" id="assetsDropdown">
                                 <ul>
-                                    <li class="dropdown-item">Favorites</li>
-                                    <li class="dropdown-item">Collections</li>
+                                    <li class="dropdown-item">
+                                    <a href="../main/favorite.html">Favorites</a>
+                                    </li>
+                                    <li class="dropdown-item">
+                                    <a href="../main/collection.html">Collections</a>
+                                    </li>
+
                                     <li class="dropdown-item">Account</li>
                                 </ul>
                             </div>
