added a 404 page for unfinsihed sections

--- a/main/404page.html
+++ b/main/404page.html
@@ -73,7 +73,7 @@
                         <ul>
                             <li class="dropdown-item sign-in-link">Sign in</li>
                             <li class="dropdown-item log-in-link">Log in</li>
-                            <li class="dropdown-item"><a href="../main/404">Help and Support</a></li>
+                            <li class="dropdown-item"><a href="../main/404page.html">Help and Support</a></li>
                         </ul>
                     </div>
                 </li>
@@ -82,15 +82,10 @@
     </header>
 
     <main class="main-content">
-        <h1>Give us your Feedback</h1>
+        <h1>404 Not Found</h1>
         <p class="description">
-            Your thoughts help us grow and improve. Whether it's a quick suggestion, a bug report, or a brilliant idea, your feedback makes a difference. Tell us what's working, what's not, and what you'd love to see next.
+            Heads up! We're still building this part of the site fresh blooms coming soon!
         </p>
-        
-        <form class="feedback-form">
-            <textarea placeholder="Share your thoughts..."></textarea>
-            <button type="submit" class="submit-btn">Submit</button>
-        </form>
     </main>
 
        <!-- SIGN UP MODAL -->
@@ -214,6 +209,6 @@
 
     <!-- JAVASCRIPT -->
     <script src="../js/forms.js"></script>
-    <script src="../modal.js"></script>
+    <script src="../js/modal.js"></script>
 </body>
 </html>
