--- a/main/index.html
+++ b/main/index.html
@@ -55,7 +55,7 @@
                                     <a href="../main/collection.html">Collections</a>
                                     </li>
 
-                                    <li class="dropdown-item">Account</li>
+                                    <li class="dropdown-item"><a href="../main/404page.html">Account</a></li>
                                 </ul>
                             </div>
                         </li>
@@ -69,7 +69,7 @@
                                 <ul>
                                     <li class="dropdown-item sign-in-link">Sign in</li>
                                     <li class="dropdown-item log-in-link">Log in</li>
-                                    <li class="dropdown-item">Help and Support</li>
+                                    <li class="dropdown-item"><a href="../main/404page.html">Help and Support</a></li>
                                 </ul>
                             </div>
                         </li>
