--- a/main/survey.html
+++ b/main/survey.html
@@ -59,7 +59,7 @@
                     <li class="dropdown-item">
                     <a href="../main/collection.html">Collections</a>
                     </li>
-                    <li class="dropdown-item">Account</li>
+                    <li class="dropdown-item"><a href="../main/404page.html">Account</a></li>
                 </ul>
             </div>
         </li>
@@ -72,13 +72,13 @@
                 <ul>
                     <li class="dropdown-item sign-in-link">Sign in</li>
                     <li class="dropdown-item log-in-link">Log in</li>
-                    <li class="dropdown-item">Help and Support</li>
+                    <li class="dropdown-item"><a href="../main/404page.html">Help and Support</a></li>
                 </ul>
             </div>
         </li>
-      </ul>
+    </ul>
     </nav>
-  </header>
+</header>
 
     <div class="container">
         <div class="intro">
