--- a/main/feedback.html
+++ b/main/feedback.html
@@ -214,6 +214,6 @@
 
     <!-- JAVASCRIPT -->
     <script src="../js/forms.js"></script>
-    <script src="../modal.js"></script>
+    <script src="../js/modal.js"></script>
 </body>
 </html>
