--- a/main/browse.html
+++ b/main/browse.html
@@ -404,6 +404,7 @@
     <!-- JAVASCRIPT -->
     <script src="../js/main.js"></script>
     <script src="../js/modal.js"></script>
-    <script src="../js/selected.js"></script>
+    <script src="../js/data.js"></script>      
+    <script src="../js/selected.js"></script>    
 </body>
 </html>
