added a searhc functionality

--- a/main/browse.html
+++ b/main/browse.html
@@ -406,6 +406,7 @@
     <script src="../js/modal.js"></script>
     <script src="../js/selected.js"></script>   
     <script src="../js/data.js"></script>    
+    <script src="../js/search.js"></script>
     
 </body>
 </html>
