--- a/main/index.html
+++ b/main/index.html
@@ -213,5 +213,6 @@
 
         <!-- JAVASCRIPT -->
         <script src="../js/modal.js"></script>
+        <script src="../js/search.js"></script>
     </body>
 </html>
