--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon/fav-32px.jpg" />
         <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/fav-180px.jpg" />
         <link rel="icon" type="image/png" sizes="192x192" href="../assets/favicon/fav-192px.jpg" />
-        <link rel="stylesheet" href="../css/style.css" />
-        <link rel="stylesheet" href="../css/modal.css" />
+        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/modal.css" />
     </head>
 
     <body>
