--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
         <meta name="description" content="Peony is a visual haven for flower lovers. Explore curated blooms, discover rare petals, and find the flower that speaks to your heart." />
         <meta name="keywords" content="flower catalogue, bouquet, floral, peony, nature, blooms, petals, flower lovers" />
         <meta name="author" content="Sean Rhani Dela Cruz" />
-        <link rel="shortcut icon" href="../assets/favicon/fav-48px.ico" />
-        <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon/fav-32px.jpg" />
-        <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/fav-180px.jpg" />
-        <link rel="icon" type="image/png" sizes="192x192" href="../assets/favicon/fav-192px.jpg" />
+    <link rel="shortcut icon" href="assets/favicon/fav-48px.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/fav-32px.jpg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/fav-180px.jpg" />
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/favicon/fav-192px.jpg" />
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="css/modal.css" />
     </head>
@@ -49,13 +49,13 @@
                             <div class="dropdown-menu" id="assetsDropdown">
                                 <ul>
                                     <li class="dropdown-item">
-                                    <a href="../main/favorite.html">Favorites</a>
+                                    <a href="main/favorite.html">Favorites</a>
                                     </li>
                                     <li class="dropdown-item">
-                                    <a href="../main/collection.html">Collections</a>
+                                    <a href="main/collection.html">Collections</a>
                                     </li>
 
-                                    <li class="dropdown-item"><a href="../main/404page.html">Account</a></li>
+                                    <li class="dropdown-item"><a href="main/404page.html">Account</a></li>
                                 </ul>
                             </div>
                         </li>
@@ -69,7 +69,7 @@
                                 <ul>
                                     <li class="dropdown-item sign-in-link">Sign in</li>
                                     <li class="dropdown-item log-in-link">Log in</li>
-                                    <li class="dropdown-item"><a href="../main/404page.html">Help and Support</a></li>
+                                    <li class="dropdown-item"><a href="main/404page.html">Help and Support</a></li>
                                 </ul>
                             </div>
                         </li>
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <div class="hero-right">
-                <img class="hero-image-main" src="../assets/images/heroImage-sr4.jpg" alt="Beautiful pink tulip flower" />
+                <img class="hero-image-main" src="assets/images/heroImage-sr4.jpg" alt="Beautiful pink tulip flower" />
             </div>
         </section>
 
@@ -138,7 +138,7 @@
                 <!-- ABOUT SECTION -->
                 <div class="footer-section">
                     <div class="logo-and-text">
-                        <img class="peony-logo" src="../assets/logo/peony-logo.jpg" alt="Peony logo" />
+                        <img class="peony-logo" src="assets/logo/peony-logo.jpg" alt="Peony logo" />
                         <p class="logo-text">Peony, a flower Catalogue Website</p>
                     </div>
                     <div class="about-text">
@@ -212,7 +212,7 @@
         </footer>
 
         <!-- JAVASCRIPT -->
-        <script src="../js/modal.js"></script>
-        <script src="../js/search.js"></script>
+    <script src="js/modal.js"></script>
+    <script src="js/search.js"></script>
     </body>
 </html>
