--- a/main/favorite.html
+++ b/main/favorite.html
@@ -7,13 +7,13 @@
     <meta name="description" content="Peony is a visual haven for flower lovers. Explore curated blooms, discover rare petals, and find the flower that speaks to your heart." />
     <meta name="keywords" content="flower catalogue, bouquet, floral, peony, nature, blooms, petals, flower lovers" />
     <meta name="author" content="Sean Rhani Dela Cruz" />
-    <link rel="shortcut icon" href="../assets/favicon/fav-48px.ico" />
-    <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon/fav-32px.jpg" />
-    <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/fav-180px.jpg" />
-    <link rel="icon" type="image/png" sizes="192x192" href="../assets/favicon/fav-192px.jpg" />
-    <link rel="stylesheet" href="../css/favorite.css" />
-    <link rel="stylesheet" href="../css/modal.css" />
-    <link rel="stylesheet" href="../css/selected.css" />
+    <link rel="shortcut icon" href="assets/favicon/fav-48px.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/fav-32px.jpg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/fav-180px.jpg" />
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/favicon/fav-192px.jpg" />
+    <link rel="stylesheet" href="css/favorite.css" />
+    <link rel="stylesheet" href="css/modal.css" />
+    <link rel="stylesheet" href="css/selected.css" />
 </head>
 <body>
     <div class="desktop-home-page">
@@ -21,7 +21,7 @@
         <header class="header">
             <!-- Hero Background Image -->
             <div style="position: relative; width: 100%; height: 200px;">
-                <img class="vector" src="../assets/images/heroImage-sr4.jpg" alt="Header background" />
+                <img class="vector" src="assets/images/heroImage-sr4.jpg" alt="Header background" />
                 <svg style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none;">
                     <defs>
                     <clipPath id="wave-clip" clipPathUnits="objectBoundingBox">
@@ -32,7 +32,7 @@
             </div>
             
             <!-- Logo -->
-            <img class="peony-logo" src="../assets/logo/peony-logo.jpg" alt="Peony Logo" />
+            <img class="peony-logo" src="assets/logo/peony-logo.jpg" alt="Peony Logo" />
             
             <!-- Search Bar -->
             <form class="search-bar" role="search">
@@ -64,12 +64,12 @@
                         <div class="dropdown-menu" id="assetsDropdown">
                             <ul>
                                 <li class="dropdown-item">
-                                <a href="../main/favorite.html">Favorites</a>
+                                <a href="main/favorite.html">Favorites</a>
                                 </li>
                                 <li class="dropdown-item">
-                                <a href="../main/collection.html">Collections</a>
+                                <a href="main/collection.html">Collections</a>
                                 </li>
-                                <li class="dropdown-item"><a href="../main/404page.html">Account</a></li>
+                                <li class="dropdown-item"><a href="main/404page.html">Account</a></li>
                             </ul>
                         </div>
                     </li>
@@ -82,7 +82,7 @@
                             <ul>
                                 <li class="dropdown-item sign-in-link">Sign in</li>
                                 <li class="dropdown-item log-in-link">Log in</li>
-                                <li class="dropdown-item"><a href="../main/404page.html">Help and Support</a></li>
+                                <li class="dropdown-item"><a href="main/404page.html">Help and Support</a></li>
                             </ul>
                         </div>
                     </li>
@@ -206,7 +206,7 @@
             <!-- ABOUT SECTION -->
             <div class="footer-section">
                 <div class="logo-and-text">
-                    <img class="peony-logo" src="../assets/logo/peony-logo.jpg" alt="Peony logo" />
+                    <img class="peony-logo" src="assets/logo/peony-logo.jpg" alt="Peony logo" />
                     <p class="logo-text">Peony, a flower Catalogue Website</p>
                 </div>
                 <div class="about-text">
@@ -280,10 +280,10 @@
     </footer>
 
     <!-- JAVASCRIPT -->
-    <script src="../js/main.js"></script>
-    <script src="../js/modal.js"></script>
-    <script src="../js/data.js"></script>       
-    <script src="../js/selected.js"></script>                
-    <script src="../js/display-favorite.js"></script> 
+    <script src="js/main.js"></script>
+    <script src="js/modal.js"></script>
+    <script src="js/data.js"></script>       
+    <script src="js/selected.js"></script>                
+    <script src="js/display-favorite.js"></script> 
 </body>
 </html>
