--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <p>Whether you're seeking the perfect bouquet, exploring rare blossoms, or simply indulging in nature's artistry, this space is designed to help you fall in love with flowers all over again.</p>
                 </div>
                 <div class="main-buttons">
-                    <button onclick="window.location.href='browse.html'" class="browse-now-button">Browse Now</button>
+                    <button onclick="window.location.href='main/browse.html'" class="browse-now-button">Browse Now</button>
                     <button class="log-in-button" id="signInBtn">Sign in</button>
                 </div>
             </div>
