removed main category

--- a/feedback.html
+++ b/feedback.html
@@ -55,12 +55,12 @@
                     <div class="dropdown-menu" id="assetsDropdown">
                         <ul>
                             <li class="dropdown-item">
-                            <a href="main/favorite.html">Favorites</a>
+                            <a href="favorite.html">Favorites</a>
                             </li>
                             <li class="dropdown-item">
-                            <a href="main/collection.html">Collections</a>
+                            <a href="collection.html">Collections</a>
                             </li>
-                            <li class="dropdown-item"><a href="main/404page.html">Account</a></li>
+                            <li class="dropdown-item"><a href="404page.html">Account</a></li>
                         </ul>
                     </div>
                 </li>
@@ -73,7 +73,7 @@
                         <ul>
                             <li class="dropdown-item sign-in-link">Sign in</li>
                             <li class="dropdown-item log-in-link">Log in</li>
-                            <li class="dropdown-item"><a href="main/404">Help and Support</a></li>
+                            <li class="dropdown-item"><a href="404page.html">Help and Support</a></li>
                         </ul>
                     </div>
                 </li>
