--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <!-- HEADER -->
             <header class="header">
                 <form class="search-bar" role="search">
-                    <input type="search" placeholder="Find a Flower..." />
+                    <input type="text" placeholder="Find a Flower..." />
                     <button type="submit" class="search-button">
                         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#666" stroke-width="2">
                             <circle cx="11" cy="11" r="8"></circle>
