Added category js

--- a/browse.html
+++ b/browse.html
@@ -36,7 +36,7 @@
             
             <!-- Search Bar -->
             <form class="search-bar" role="search">
-                <input type="search" placeholder="Find a Flower..." class="text-wrapper-6" />
+                <input type="text" placeholder="Find a Flower..." class="text-wrapper-6" />
                 <button type="submit" class="search-button">
                     <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#666" stroke-width="2">
                         <circle cx="11" cy="11" r="8"></circle>
@@ -407,6 +407,7 @@
     <script src="js/selected.js"></script>   
     <script src="js/data.js"></script>    
     <script src="js/search.js"></script>
+    <script src="js/category.js"></script>
     
 </body>
 </html>
